TWINS-189: [core] update DomainBusinessAccountDTOMapper with optimized twin and user count loading logic; refactor TwinService for improved count handling